# cell-cell-bert

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
cpt/: 251029_cell_token_CPT.ipynb  251029_surround_entity_CPT.ipynb
notebooks/: make_figures.ipynb
scripts/: 02_cpt.py  03_run_finetuning.sh  03_train.py  04_eval_gpt.py
src/CCBERT/: models.py  trainer.py  utils.py
src/ccbert/: data_cpt.py  models.py  trainer.py
src/my_project/: __init__.py  core.py
