# ===================================================================
#  ビルドシステムの設定 (dev版から変更なし)
# ===================================================================
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ===================================================================
#  プロジェクトの基本情報
# ===================================================================
[project]
# プロジェクト名 (src/以下のディレクトリ名と合わせる)
name = "my_project"
# 論文投稿時のバージョン (例: 1.0.0)
version = "1.0.0"
description = "Source code for the paper: [Paper Title Here]."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
# ### <<< 変更: LICENSEファイルを指定
license = { file="LICENSE" }


# -------------------------------------------------------------------
#  依存ライブラリ
# -------------------------------------------------------------------
# 論文の結果を再現するための必須ライブラリ。
# 再現性を厳密にするため "torch==2.0.1" のようにバージョンを固定することを推奨。
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "torch",
]


# ===================================================================
#  追加の依存ライブラリ (開発・解析用)
# ===================================================================
[project.optional-dependencies]
# 論文の図を作成するNotebook環境など、開発や解析時に使うライブラリ。
# `pip install -e ".[dev]"` でインストールする。
dev = [
    "jupyterlab",
    "ipykernel",
    "black",
    "ruff",
]